# bnlinux

./: CMakeCache.txt  CMakeLists.txt  COPYING.txt  Makefile  README.md  bnlinux  bnlinux.cpp  bnlinux.h  bnlinux_ony.cpp  bnlinux_ony.h  clovo.cpp  clovo.h  cmake_install.cmake  compile_commands.json  listbox.cpp  listbox.h  listbox_ony.cpp  listbox_ony.h  main.cpp  shift.cpp  shift.h  shift_ony.cpp  shift_ony.h  sound.cpp  sound.h  sound_ony.cpp  sound_ony.h  typee.cpp  typee.h  znak.cpp  znaki.h  znaki_ony.cpp  znaki_ony.h
instal-deb/: bn.sh  bnlinux.deb  bnlinux_0.0.6_16-03-2021.deb  bnlinux_27-03-2021.deb
opt/bnlinux/local/: alfavid.txt  alfavideng.txt
usr/share/applications/: BNLinux_BN.desktop  BNLinux_BN_Sound_Shift_Orfo_Znak.desktop  BNLinux_Exit.desktop  BNLinux_Sound.desktop
usr/share/cinnamon/applets/bnlinux@bnabor.ru/: applet.js  metadata.json  settings-schema.json
usr/share/desktop-directory/: BNLinux.directory
usr/share/man/man8/: bnlinux.8
usr/share/polkit-1/actions/: ru.almaz-vil.bnlinux.policy
